# sim_pitcher_search_with_km_demo

./: README.md  pyproject.toml
data/: km_model.pickle  mm.pickle  pca.pickle  pca_df.pickle  row_whip_dfs.pickle
sim_pitcher_search_with_km_demo/: pitch_type_search_demo.py
