[tool.poetry]
name = "sim-pitcher-search-with-km-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sim_pitcher_search_with_km_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.0"
matplotlib = "3.6.1"
scikit-learn = "1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
